# solar-sim

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  package-lock.json  package.json  playwright.config.ts  speedread.md  task-graph.yaml  vite.config.ts
backend/: Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  models.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/plans/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/plans/migrations/: 0001_initial.py
backend/apps/proxy/: apps.py  urls.py  views.py
backend/config/: settings.py  urls.py
docs/: happy_path.md  specification.md
docs/active/: MILESTONES.md  ROADMAP.md
docs/active/stories/: S-005-solar-engine.md  S-006-location-input.md  S-007-workflow-audit.md  S-022-annual-exposure-heatmap.md  S-024-django-backend-integration.md
docs/active/tickets/: T-005-01-sun-position.md  T-005-02-sun-hours.md  T-005-03-seasonal.md  T-005-04-integration-testing.md  T-007-02-ticket-first-dag.md  (+26 more)
docs/reports/: backend-validation-2026-02-04.md  backend-validation-2026-02-05.md
e2e/: shademap-sun-exposure.spec.ts
infrastructure/: .env.example  README.md
infrastructure/docker/: Caddyfile  Caddyfile.dev  Dockerfile  docker-compose.dev.yml  docker-compose.yml  init-db.sql
infrastructure/scripts/: backup.sh  download-canopy.sh  seed-climate.js
src/: app.d.ts  app.html
src/lib/: index.ts
src/routes/: +layout.svelte  +page.svelte
tools/: audit.ts  dag.test.ts  dag.ts  package-lock.json  package.json  prompt.ts  ralph.sh  types.ts
(+257 files in other folders)
